[package]
name = "milkdbg"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
rustyline = "9.0.0"
rusty_v8 = "0.31.0"
flume = "0.10.9"
bitflags = "1.3.2"
winapi = { version = "0.3.9", features = [
    "errhandlingapi",
    "minwinbase",
    "winbase",
    "ntstatus",
    "debugapi",
    "memoryapi",
    "wow64apiset",
    "handleapi",
    "processthreadsapi",
    "psapi",
    "dbghelp",
    "tlhelp32",
    "impl-debug",
    "impl-default",
] }
milk-pe-parser = { path = "../milk-pe-parser" }
concat-idents = "1.1.3"
iced-x86 = "1.14.0"
rust-lapper = "1.0.0"
exe = "0.4.4"
structopt = "0.3.25"
json = "0.12.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
json-color = "0.7.1"
include_dir = "0.6.2"
